# RayTracing

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp
include/: ImageUtils.hpp  Material.hpp  Object.hpp  Plane.hpp  Ray.hpp  Rendering.hpp  Sphere.hpp  VectorUtils.hpp
lib/: CMakeLists.txt  ImageUtils.cpp  Plane.cpp  Rendering.cpp  Sphere.cpp  VectorUtils.cpp
